--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -10,19 +9,20 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
 
-  font-synthesis: none;
+  /* font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; */
 }
 
 body {
   margin: 0;
   position: fixed;
   background-color: #0f0326;
+  font-family: "Oswald";
 }
-@media screen and (max-width: 992px) {
+/* @media screen and (max-width: 992px) {
   body {
     background-color: black;
   }
@@ -36,7 +36,7 @@ body {
   body {
     background-color: white;
   }
-}
+} */
 
 h1 {
   font-size: 2.2em;
