--- a/src/index.css
+++ b/src/index.css
@@ -1,46 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Oleo+Script&family=Rubik+Moonrocks&display=swap");
+
 @tailwind base;
 @tailwind components;
 
 :root {
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
+  font-weight: 100;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-
-  /* font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%; */
 }
 
 body {
   margin: 0;
   position: fixed;
   background-color: #0f0326;
-  font-family: "Oswald";
 }
-/* @media screen and (max-width: 992px) {
-  body {
-    background-color: black;
-  }
-}
-@media screen and (max-width: 772px) {
-  body {
-    background-color: red;
-  }
-}
-@media screen and (max-width: 552px) {
-  body {
-    background-color: white;
-  }
-} */
 
 h1 {
   font-size: 2.2em;
   line-height: 1.1;
 }
-
+p {
+  font-family: "Oleo Script", system-ui;
+}
 @tailwind utilities;
