--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 100;
+  font-family: "General Sans", sans-serif;
 
   color: rgba(255, 255, 255, 0.87);
 }
@@ -22,6 +23,6 @@ h1 {
   line-height: 1.1;
 }
 p {
-  font-family: "Oleo Script", system-ui;
+  font-family: "General Sans", sans-serif;
 }
 @tailwind utilities;
