--- a/src/App.css
+++ b/src/App.css
@@ -228,7 +228,7 @@
   box-shadow: 1px 1px 2px 1px black;
   background-color: #0a192f;
   border-radius: 5px;
-  @apply w-[90%] lg:w-[100%] h-[50vh];
+  @apply w-[90%] lg:w-[100%] h-[50vh] object-cover;
 }
 .skill {
   box-shadow: 1px 1px 2px 1px black;
