--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
   @apply border-[2px] border-[#c785d8]  ml-[15%] w-[77%]  md:w-[40vw] md:h-[45vh] rounded-[5px] h-[40vh] text-[transparent];
 }
 .mikailPicture img {
-  @apply rounded-[5px] lg:w-[60%] md:w-[40vw] h-[40vh] md:h-[45vh] relative z-[1] md:top-[-264px] object-cover top-[-234px] md:ml-[7%];
+  @apply rounded-[5px] md:w-[40vw] h-[40vh] md:h-[45vh] relative z-[1] md:top-[-264px] object-cover top-[-234px] md:ml-[7%];
 }
 
 .LinkCollection {
@@ -256,6 +256,10 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
 .overlay {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.overlayProject:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
