--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,9 @@
   font-weight: 100;
   color: rgba(255, 255, 255, 0.87);
 }
-
+.slick-slide > div {
+  margin: 0 10px;
+}
 body {
   margin: 0;
   position: fixed;
